Highlight button got oval shape

--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -72,8 +72,9 @@
         }
 
         .button-group-center {
+            display:  flex;
             justify-content: center;
-
+            align-items: center;
             .toolbox-button {
 
                 .toolbox-icon {
