--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -77,8 +77,9 @@
         }
 
         .button-group-center {
+            display:  flex;
             justify-content: center;
-
+            align-items: center;
             .toolbox-button {
 
                 .toolbox-icon {
