--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -135,6 +135,26 @@
 
         .button-group-right {
             justify-content: flex-end;
+            .localRecCustomClass {
+                background-color: #fff;
+                border-radius: 50%;
+                border: 1px solid #d1dbe8;
+                margin: 0px 4px;
+                width: 40px;
+                height: 40px;
+
+                &:hover {
+                    svg {
+                        fill: white !important;
+                    }
+                }
+
+                svg {
+                    fill: #2a3a4b !important;
+                }
+             
+            }
+           
         }
 
         .overflow-menu {
