--- a/css/filmstrip/_tile_view.scss
+++ b/css/filmstrip/_tile_view.scss
@@ -80,9 +80,10 @@
         box-sizing: border-box;
         display: flex;
         flex-wrap: wrap;
-        margin-top: auto;
+        margin-top: 0 !important;
         margin-bottom: auto;
         justify-content: center;
+    
 
         .videocontainer {
             border: 0;
