--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -154,6 +154,10 @@
                 }
              
             }
+            .localRecCustom{
+                font-size: 8px !important;
+                padding: 2px !important;
+            }
            
         }
 
