--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -155,8 +155,9 @@
              
             }
             .localRecCustom{
-                font-size: 8px !important;
-                padding: 2px !important;
+                font-size: 11px !important;
+                width: 75px !important;
+                height: 50px !important;
             }
            
         }
