--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -48,7 +48,7 @@
     }
 
     .toolbox-background {
-        background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
+        background-image: linear-gradient(to top, #1F2931, rgba(0, 0, 0, 0));
         transition: bottom .3s ease-in;
         height: 160px;
         width: 100%;
