--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -90,11 +90,11 @@ $modalTextColor: #333;
  * Chat
  */
 $chatActionsSeparatorColor: rgb(173, 105, 112);
-$chatHeaderBackgroundColor: rgba(42, 58, 75, 0.9);
-$chatInputSeparatorColor: #A4B8D1;
+$chatHeaderBackgroundColor: #FFFFFF;
+$chatInputSeparatorColor: #9199B1;
 $chatLocalMessageBackgroundColor: rgb(4, 98, 178);
 $chatPrivateMessageBackgroundColor: rgb(153, 69, 77);
-$chatRemoteMessageBackgroundColor:  rgb(86, 101, 114);
+$chatRemoteMessageBackgroundColor:  #EFF4F7;
 $sidebarWidth: 375px;
 
  /**
