--- a/css/modals/invite/_invite_more.scss
+++ b/css/modals/invite/_invite_more.scss
@@ -6,7 +6,7 @@
         width: 100%;
         text-align: center;
         z-index: $zindex2;
-        background-image: linear-gradient(to bottom,#1F2931, rgba(0, 0, 0, 0));
+        background-image: linear-gradient(to bottom,#1F2931,#1f293100);
 
         &.elevated {
             z-index: $filmstripVideosZ + 1;
