Changed design of chat

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -65,6 +65,10 @@ body {
     fill: white;
 }
 
+.chat-close-icon svg {
+    fill: #9199b1 !important;
+}
+
 .jitsi-icon.gray svg {
     fill: #5E6D7A;
     cursor: pointer;
