--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -506,6 +506,10 @@
     height: 200px;
 }
 
+#dominantSpeakerAvatar{
+    margin: 0 auto;
+}
+
 #dominantSpeakerAvatarContainer {
     top: 50px;
     margin: auto;
