--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -48,7 +48,7 @@
     }
 
     .toolbox-background {
-        background-image: linear-gradient(to top, #1F2931,  #1F293100,);
+        background-image: linear-gradient(to top, rgb(13, 19, 23),  rgb(13, 19, 23, 0),);
         transition: bottom .3s ease-in;
         height: 160px;
         width: 100%;
