--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -4,7 +4,7 @@
  * Style variables
  */
 $baseFontFamily: -apple-system, BlinkMacSystemFont, 'open_sanslight', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$hangupColor: #bf2117;
+$hangupColor: #FF0F0F;
 $hangupFontSize: 2em;
 
 /**
