--- a/css/_base.scss
+++ b/css/_base.scss
@@ -76,7 +76,7 @@ p {
 }
 
 body, input, textarea, keygen, select, button {
-    font-family: $baseFontFamily !important;
+    font-family: $jaftonBaseFont !important;
 }
 
 #nowebrtc {
