--- a/css/_settings-button.scss
+++ b/css/_settings-button.scss
@@ -10,8 +10,8 @@
             border-radius: 50%;
             border: 1px solid #d1dbe8;
             justify-content: center;
-            width: 38px;
-            height: 38px;
+            width: 40px;
+            height: 40px;
 
             &:hover {
                 background-color: #daebfa;
@@ -57,7 +57,8 @@
         height: 16px;
         position: absolute;
         text-align: center;
-        right: 4px;
+        top: 30%;
+        left: 60%;
         width: 16px;
 
         &> svg {
