--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -63,22 +63,55 @@
         .welcome-footer {
             display: none;
         }
+
+        #videoResolutionLabel {
+            display: none;
+        }
+        .desktop-browser {
+            .vertical-filmstrip .filmstrip {
+                display: none;
+        }
     }
 
     .new-toolbox {
         .toolbox-content {
             .button-group-center, .button-group-left, .button-group-right {
+                .settings-button-small-icon {
+                    display: none;
+                }
                 .toolbox-button {
+                    width: auto;
                     .toolbox-icon {
-                        width: 28px;
-                        height: 28px;
+                        width: 38px;
+                        height: 38px;
                         svg {
                             width: 20px;
                             height: 20px;
                         }
                     }
+
+                    &:nth-child(2) {
+                        .toolbox-icon {
+                            width: 38px;
+                            height: 38px;
+                        }
+
+                        .iconDefContainer{
+                            padding-bottom: 0px;
+                        }
+                    }
+                }
+            }
+
+            .button-group-center {
+                .toolbox-button { 
+                    padding: 0px;
                 }
             }
         }
     }
+    .chrome-extension-banner {
+        display: none;
+    }
+}
 }
