Changed design of popups

--- a/css/_atlaskit_overrides.scss
+++ b/css/_atlaskit_overrides.scss
@@ -6,6 +6,15 @@
     bottom: calc(#{$newToolbarSizeWithPadding}) !important;
 }
 
+.eoRGoR, .hnfWPo{
+    background-color: #1E2931 !important;
+    color: #FFFFFF !important;
+}
+
+.ciPBsT, .fMGpzL{
+    color: #FFFFFF !important;
+}
+
 /**
  * Disable the slide-in animation for @atlaskit/flag due to the animation
  * repeating for each queued flag once it becomes the top flag.
