--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -226,7 +226,7 @@
                 }
 
                 svg {
-                    fill: #B8C7E0 !important;
+                    fill: #FFFFFF !important;
                 }
             }
 
