--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -51,10 +51,10 @@ $newToolbarHangupFontSize: 32px;
 $newToolbarSize: 45px;
 $newToolbarSizeWithPadding: calc(#{$newToolbarSize + 50} + 24px);
 $toolbarTitleFontSize: 19px;
-$overflowMenuBG: initial;
+$overflowMenuBG: #1E2931;
 $overflowMenuItemHoverBG: #313D52;
-$overflowMenuItemHoverColor: #B8C7E0;
-$overflowMenuItemColor: #B8C7E0;
+$overflowMenuItemHoverColor: #FFFFFF;
+$overflowMenuItemColor: #FFFFFF;
 
 /**
  * Video layout
