--- a/css/themes/_light.scss
+++ b/css/themes/_light.scss
@@ -80,7 +80,7 @@ $errorColor: #c61600;
 $feedbackCancelFontColor: #333;
 
 // Popover colors
-$popoverBg: initial;
+$popoverBg: #1E2931;
 $popoverFontColor: #ffffff !important;
 $popupMenuColor: #ffffff !important;
 $popupMenuHoverColor: #ffffff !important;
