Added youtube integration

--- a/css/_jquery-impromptu.scss
+++ b/css/_jquery-impromptu.scss
@@ -108,6 +108,10 @@ div.jqi .jqisubstate .jqibuttons button{
 	padding: 10px 18px;
 }
 
+.aui-dialog2-header{
+    margin-top: 10% !important;
+}
+
 /* arrows for tooltips/tours */
 .jqi .jqiarrow{ position: absolute; height: 0; width:0; line-height: 0; font-size: 0; border: solid 10px transparent;}
 
