--- a/css/themes/_light.scss
+++ b/css/themes/_light.scss
@@ -47,9 +47,9 @@ $reloadProgressBarBg: #0074E0;
 /**
  * Dialog colors
  **/
-$auiDialogColor: #eceef1;
+$auiDialogColor: #000;
 $auiDialogBg: #253858;
-$auiDialogContentBg: #344563;
+$auiDialogContentBg: #FFFFFF;
 $auiBorderColor: #253858;
 $dialogTitleFontWeight: 400;
 $dialogErrorText: #344563;
