--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -260,5 +260,6 @@ $chromeExtensionBannerRightInMeeeting: 10px;
 /**
 * media type thresholds
 */
+$midSmallScreen: 900px;
 $smallScreen: 700px;
 $verySmallScreen: 500px;
