--- a/css/filmstrip/_tile_view_overrides.scss
+++ b/css/filmstrip/_tile_view_overrides.scss
@@ -50,4 +50,10 @@
     .videocontainer__toptoolbar {
         z-index: auto;
     }
+
+    .videocontainer {
+        .indicator-container{
+            margin-right: 7px !important;
+        }
+    }
 }
