Changed popup colors

--- a/css/_atlaskit_overrides.scss
+++ b/css/_atlaskit_overrides.scss
@@ -6,7 +6,7 @@
     bottom: calc(#{$newToolbarSizeWithPadding}) !important;
 }
 
-.eoRGoR, .hnfWPo{
+.eoRGoR, .hnfWPo, .jKXuju{
     background-color: #1E2931 !important;
     color: #FFFFFF !important;
 }
