--- a/css/modals/_dialog.scss
+++ b/css/modals/_dialog.scss
@@ -97,9 +97,14 @@
         border-radius: 10px;
         height: 50px;
         line-height: 50px;
-        margin: 20px 0;
+        margin: 20px 0 5px 0;
         background-color: $auiDialogContentBg;
         color: $auiDialogColor;
+    }
+
+    .youtube_ex_text{
+        font-size: 14px;
+        color: #9199B1;
     }
 
     .form-control:not(:last-child) {
