--- a/css/modals/invite/_invite_more.scss
+++ b/css/modals/invite/_invite_more.scss
@@ -60,6 +60,7 @@
             & > div > svg {
                 cursor: pointer;
                 fill: #A4B8D1;
+                width: 18px;
             }
         }
 
