--- a/css/_atlaskit_overrides.scss
+++ b/css/_atlaskit_overrides.scss
@@ -15,6 +15,10 @@
     color: #FFFFFF !important;
 }
 
+.eoRGoR{
+    border-radius: 25px !important;
+}
+
 /**
  * Disable the slide-in animation for @atlaskit/flag due to the animation
  * repeating for each queued flag once it becomes the top flag.
