--- a/css/components/_input-control.scss
+++ b/css/components/_input-control.scss
@@ -24,6 +24,72 @@
     }
 }
 
+
+.separator {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 30px 0px;
+}
+  
+.separator::before,
+.separator::after {
+content: '';
+    flex: 1;
+    border-bottom: 1px solid #fff;
+}
+  
+.separator:not(:empty)::before {
+    margin-right: .25em;
+}
+  
+.separator:not(:empty)::after {
+    margin-left: .25em;
+}
+
+.button-wrapper {
+    position: relative;
+    width: 100%;
+    margin: 10px auto;
+    border-radius: 10px;
+  }
+  
+  .button-wrapper span.label {
+    position: relative;
+    z-index: 0;
+    display: inline-block;
+    width: 100%;
+    background: #FFFFFF;
+    cursor: pointer;
+    color: #000;
+    padding: 10px 0;
+    border-radius: 10px;
+    font-size:16px;
+  }
+
+    .gdrive-con{
+      display: inline-block;
+      margin-left: 30%;
+      .gdrive-img{
+          position: absolute;
+          top: 13px;
+          margin-left: 5px;
+          width: 100px;
+      }
+    }
+  
+  #upload {
+      display: inline-block;
+      position: absolute;
+      z-index: 1;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      cursor: pointer;
+  }
+
 @include placeholder {
     color: $placeHolderColor;
 }
