Some ui changes

--- a/css/_popup_menu.scss
+++ b/css/_popup_menu.scss
@@ -6,7 +6,7 @@
     min-width: 75px;
     text-align: left;
     padding: 0px;
-    width: 180px;
+    width: fit-content;
     white-space: nowrap;
 
     &__item {
