--- a/css/filmstrip/_tile_view_overrides.scss
+++ b/css/filmstrip/_tile_view_overrides.scss
@@ -33,6 +33,9 @@
         top: 0;
         .indicator-container{
             float: right;
+            background: none;
+            padding: 0;
+            margin: 0;
             .toolbar-icon>div{
                 width: 22px;
                 height: 22px;
