--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -32,6 +32,14 @@
 
     .iconDefContainer{
         margin-top: -5px;
+        span {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+        }
     }
 
 
