Made small changes on ui

--- a/css/_atlaskit_overrides.scss
+++ b/css/_atlaskit_overrides.scss
@@ -6,13 +6,20 @@
     bottom: calc(#{$newToolbarSizeWithPadding}) !important;
 }
 
-.eoRGoR, .hnfWPo, .jKXuju{
+.eoRGoR, .hnfWPo, .jKXuju, .dIBYkO{
     background-color: #1E2931 !important;
     color: #FFFFFF !important;
 }
 
 .ciPBsT, .fMGpzL{
     color: #FFFFFF !important;
+}
+
+.css-t5emrf{
+    padding: 3px;
+    color: white;
+    border-radius: 3px;
+    border: 1px solid #56b7ba;
 }
 
 .eoRGoR{
