--- a/css/components/_input-control.scss
+++ b/css/components/_input-control.scss
@@ -52,9 +52,9 @@ content: '';
     width: 100%;
     margin: 10px auto;
     border-radius: 10px;
-  }
+}
   
-  .button-wrapper span.label {
+.button-wrapper span.label {
     position: relative;
     z-index: 0;
     display: inline-block;
@@ -65,30 +65,45 @@ content: '';
     padding: 10px 0;
     border-radius: 10px;
     font-size:16px;
-  }
+}
 
-    .gdrive-con{
-      display: inline-block;
-      margin-left: 30%;
-      .gdrive-img{
-          position: absolute;
-          top: 13px;
-          margin-left: 5px;
-          width: 100px;
-      }
+.gdrive-con{
+    display: inline-block;
+    margin-left: 30%;
+    .gdrive-img{
+        position: absolute;
+        top: 13px;
+        margin-left: 5px;
+        width: 100px;
     }
+}
+
+.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+    background: #ccc;
+}
+
+.spinner-con{
+    background: #1e2931;
+    border-radius: 50%;
+    padding: 5px;
+    position: absolute;
+    left: 20%;
+    top: 10%;
+}
   
-  #upload {
-      display: inline-block;
-      position: absolute;
-      z-index: 1;
-      height: 100%;
-      width: 100%;
-      top: 0;
-      left: 0;
-      opacity: 0;
-      cursor: pointer;
-  }
+#upload {
+    display: inline-block;
+    position: absolute;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+}
 
 @include placeholder {
     color: $placeHolderColor;
